# CDLL

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  cdll.c  cdll.h
tests/: CMakeLists.txt  cdll_test.cpp
